# ECHOSELF

./: .gitignore  LICENSE  README.md  README_EN.md  README_JA.md  README_KO.md  app.py  pyproject.toml  start.bat  start.sh
src/: exporter.py  inference.py  parser.py  preprocessor.py  trainer.py
