[project]
name = "echoself"
version = "0.1.0"
description = "从聊天记录训练专属数字分身"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.44.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
# 国内下载模型（推荐）
modelscope = ["modelscope>=1.9.0"]
# 境外下载模型
huggingface = ["huggingface-hub>=0.20.0"]
# 模型训练引擎
train = ["llamafactory"]
# 全量安装
all = ["modelscope>=1.9.0", "huggingface-hub>=0.20.0", "llamafactory"]

[project.scripts]
echoself = "app:main"
